Pre-implementation of format and check

--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/messages/Messages.properties
@@ -1,1 +1,9 @@
-HELLO_WORLD=Hello, World!!!
+BAD_SIZE_OF_FIXED_SIZE_DATA_ERROR=Size of fixed-size data is invalid
+BAD_SIZE_FOR_FORMAT_ERROR=Can't format with size %d (should be between %d and %d)
+BAD_SIGNATURE_ERROR=Signature is invalid
+BAD_BLOCK_SIZE_RATIO_ERROR=Block size ratio is invalid
+BAD_BLOCK_INDEX_SIZE_EXPONENT_ERROR=Block index size exponent is invalid
+BAD_CONTENT_SIZE_SIZE_EXPONENT_ERROR=Size exponent of content size is invalid
+BAD_BLOCK_COUNT_ERROR=Block count is invalid
+BAD_FREE_BLOCK_COUNT_ERROR=Free block count is invalid
+BAD_SIZE_ERROR=Size is invalid
