--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/messages/Messages.properties
@@ -1,4 +1,4 @@
-BAD_SIZE_OF_FIXED_SIZE_DATA_ERROR=Size of fixed-size data is invalid
+FIXED_SIZE_DATA_READ_ERROR=Fixed-size data read error
 BAD_SIZE_FOR_FORMAT_ERROR=Can't format with size %d (should be between %d and %d)
 BAD_SIGNATURE_ERROR=Signature is invalid
 BAD_BLOCK_SIZE_RATIO_ERROR=Block size ratio is invalid
@@ -7,3 +7,11 @@ BAD_CONTENT_SIZE_SIZE_EXPONENT_ERROR=Size exponent of content size is invalid
 BAD_BLOCK_COUNT_ERROR=Block count is invalid
 BAD_FREE_BLOCK_COUNT_ERROR=Free block count is invalid
 BAD_SIZE_ERROR=Size is invalid
+BAD_FREE_BLOCK_CHAIN_HEAD_ERROR=Free block chain head is invalid
+BLOCK_READ_ERROR=Block read error
+NEXT_BLOCK_INDEX_READ_ERROR=Next block index read error
+BAD_ROOT_DIRECTORY_ENTRY_BLOCK_NEXT_BLOCK_INDEX_ERROR=Root directory entry block next block index is invalid
+BAD_ROOT_DIRECTORY_ENTRY_PARENT_DIRECTORY_ENTRY_BLOCK_CHAIN_HEAD_ERROR=Root directory entry parent directory entry block chain head is invalid
+BAD_ROOT_DIRECTORY_ENTRY_FLAGS_ERROR=Root directory entry flags are invalid
+BAD_ROOT_DIRECTORY_ENTRY_CONTENT_BLOCK_CHAIN_HEAD_ERROR=Root directory entry content block chain head is invalid
+BAD_ROOT_DIRECTORY_ENTRY_NAME_ERROR=Root directory entry name is invalid
