Dirty changes that will be refactored

--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
@@ -11,7 +11,9 @@ BAD_FREE_BLOCK_CHAIN_HEAD_ERROR=Free block chain head is invalid
 BLOCK_READ_ERROR=Block read error
 NEXT_BLOCK_INDEX_READ_ERROR=Next block index read error
 BAD_ROOT_DIRECTORY_ENTRY_BLOCK_NEXT_BLOCK_INDEX_ERROR=Root directory entry block next block index is invalid
-BAD_ROOT_DIRECTORY_ENTRY_PARENT_DIRECTORY_ENTRY_BLOCK_CHAIN_HEAD_ERROR=Root directory entry parent directory entry block chain head is invalid
 BAD_ROOT_DIRECTORY_ENTRY_FLAGS_ERROR=Root directory entry flags are invalid
 BAD_ROOT_DIRECTORY_ENTRY_CONTENT_BLOCK_CHAIN_HEAD_ERROR=Root directory entry content block chain head is invalid
 BAD_ROOT_DIRECTORY_ENTRY_NAME_ERROR=Root directory entry name is invalid
+BAD_DIRECTORY_ENTRY_FLAGS_ERROR=Directory entry flags are invalid
+BAD_DIRECTORY_ENTRY_CONTENT_BLOCK_CHAIN_HEAD_ERROR=Directory entry content block chain head is invalid
+BAD_DIRECTORY_ENTRY_NAME_ERROR=Directory entry name is invalid
