--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
@@ -1,5 +1,5 @@
 FIXED_SIZE_DATA_READ_ERROR=Fixed-size data read error
-BAD_SIZE_FOR_FORMAT_ERROR=Can't format with size %d (should be between %d and %d)
+BAD_SIZE_FOR_FORMAT_ERROR=Can't format with size %d (must be between %d and %d)
 BAD_SIGNATURE_ERROR=Signature is invalid
 BAD_BLOCK_SIZE_RATIO_ERROR=Block size ratio is invalid
 BAD_BLOCK_INDEX_SIZE_EXPONENT_ERROR=Block index size exponent is invalid
@@ -17,3 +17,24 @@ BAD_ROOT_DIRECTORY_ENTRY_NAME_ERROR=Root directory entry name is invalid
 BAD_DIRECTORY_ENTRY_FLAGS_ERROR=Directory entry flags are invalid
 BAD_DIRECTORY_ENTRY_CONTENT_BLOCK_CHAIN_HEAD_ERROR=Directory entry content block chain head is invalid
 BAD_DIRECTORY_ENTRY_NAME_ERROR=Directory entry name is invalid
+BAD_BLOCK_FILE_POSITION_ERROR=Block file position is invalid
+BIG_BLOCK_FILE_POSITION_ERROR=Block file position is too large
+READ_ONLY_BUFFER_ERROR=Buffer is read-only
+FILE_CHANNEL_CLOSE_ERROR=File channel close error
+BAD_BLOCK_FILE_SIZE_ERROR=Block file size %d is invalid (must be between %d and %d)
+NOT_ENOUGH_FREE_BLOCKS_ERROR=Not enough free blocks
+UNEXPECTED_END_BLOCK_CHAIN_ERROR=Unexpected end of block chain
+FREE_BLOCK_DATA_WRITE_ERROR=Free block data write error
+NEXT_BLOCK_INDEX_WRITE_ERROR=Next block index write error
+TOO_MANY_RELEASED_BLOCKS_ERROR=Too many released blocks
+BLOCK_WRITE_ERROR=Block write error
+BAD_BLOCK_FILE_BLOCK_CHAIN_LENGTH_ERROR=Block file block chain length is invalid
+BAD_BLOCK_FILE_BLOCK_CHAIN_HEAD_ERROR=Block file block chain head is invalid
+FILE_OPEN_ERROR=File open error
+FILE_CLOSE_ERROR=File close error
+FILE_SIZE_SET_ERROR=File size set error
+FILE_CHANNEL_GET_ERROR=File channel get error
+FIXED_SIZE_DATA_WRITE_ERROR=Fixed-size data write error
+ROOT_DIRECTORY_ENTRY_WRITE_ERROR=Root directory entry write error
+FILE_CHANNEL_OPEN_ERROR=File channel open error
+FILE_CHANNEL_SIZE_GET_ERROR=File channel size get error
