--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
@@ -38,3 +38,15 @@ FIXED_SIZE_DATA_WRITE_ERROR=Fixed-size data write error
 ROOT_DIRECTORY_ENTRY_WRITE_ERROR=Root directory entry write error
 FILE_CHANNEL_OPEN_ERROR=File channel open error
 FILE_CHANNEL_SIZE_GET_ERROR=File channel size get error
+DIRECTORY_ENTRY_CONTENT_DATA_WRITE_ERROR=Directory entry content data write error
+DIRECTORY_ENTRY_RENAME_ERROR=Directory entry rename error
+EMPTY_DIRECTORY_ENTRY_NAME_ERROR=Empty directory entry name
+TOO_LONG_DIRECTORY_ENTRY_NAME_ERROR=Too long directory entry name
+DIRECTORY_ENTRY_NAME_DATA_WRITE_ERROR=Directory entry name data write error
+DIRECTORY_ENTRY_REMOVE_ERROR=Directory entry remove error
+DIRECTORY_ENTRY_CONTENT_BLOCK_FILE_OPEN_ERROR=Directory entry content block file open error
+DIRECTORY_ENTRY_CREATE_ERROR=Directory entry create error
+DIRECTORY_ENTRY_DATA_WRITE_ERROR=Directory entry data write error
+DIRECTORY_ENTRY_BLOCK_FILE_OPEN_ERROR=Directory entry block file open error
+DIRECTORY_ENTRY_FIXED_SIZE_DATA_READ_ERROR=Directory entry fixed-size data read error
+DIRECTORY_ENTRY_NAME_READ_ERROR=Directory entry name read error
