--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
@@ -50,3 +50,6 @@ DIRECTORY_ENTRY_DATA_WRITE_ERROR=Directory entry data write error
 DIRECTORY_ENTRY_BLOCK_FILE_OPEN_ERROR=Directory entry block file open error
 DIRECTORY_ENTRY_FIXED_SIZE_DATA_READ_ERROR=Directory entry fixed-size data read error
 DIRECTORY_ENTRY_NAME_READ_ERROR=Directory entry name read error
+CANT_RENAME_ROOT_DIRECTORY_ERROR=Can't rename root directory
+CANT_REMOVE_ROOT_DIRECTORY_ERROR=Can't remove root directory
+CANT_GET_ROOT_DIRECTORY_THROUGH_ENTRY_ERROR=Can't get root directory through entry
