--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
@@ -53,3 +53,6 @@ DIRECTORY_ENTRY_NAME_READ_ERROR=Directory entry name read error
 CANT_RENAME_ROOT_DIRECTORY_ERROR=Can't rename root directory
 CANT_REMOVE_ROOT_DIRECTORY_ERROR=Can't remove root directory
 CANT_GET_ROOT_DIRECTORY_THROUGH_ENTRY_ERROR=Can't get root directory through entry
+DIRECTORY_ITEM_RENAME_ERROR=Directory item rename error
+DIRECTORY_ITEM_REMOVE_ERROR=Directory item remove error
+DIRECTORY_ITEM_CONTENT_GET_ERROR=Directory item content get error
