--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
@@ -56,3 +56,12 @@ CANT_GET_ROOT_DIRECTORY_THROUGH_ENTRY_ERROR=Can't get root directory through ent
 DIRECTORY_ITEM_RENAME_ERROR=Directory item rename error
 DIRECTORY_ITEM_REMOVE_ERROR=Directory item remove error
 DIRECTORY_ITEM_CONTENT_GET_ERROR=Directory item content get error
+CANT_REMOVE_NOT_EMPTY_DIRECTORY_ERROR=Can't remove not empty directory
+DIRECTORY_NOT_FILE_ERROR=Directory isn't file
+DIRECTORY_CONTENT_WRITE_ERROR=Directory content write error
+DIRECTORY_SUB_ENTRY_MISSING_ERROR=Directory sub entry named %s is missing
+DIRECTORY_SUB_ENTRY_OPEN_ERROR=Directory sub entry open error
+DIRECTORY_SUB_ENTRY_EXISTS_ERROR=Directory sub entry named %s already exists
+BAD_REMOVED_ENTRY_BLOCK_CHAIN_HEAD_ERROR=Removed entry block chain head is invalid
+REMOVED_ENTRY_MISSING_ERROR=Removed entry is missing
+BAD_DIRECTORY_CONTENT_SIZE_ERROR=Directory content size is invalid
