--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
@@ -65,3 +65,4 @@ DIRECTORY_SUB_ENTRY_EXISTS_ERROR=Directory sub entry named %s already exists
 BAD_REMOVED_ENTRY_BLOCK_CHAIN_HEAD_ERROR=Removed entry block chain head is invalid
 REMOVED_ENTRY_MISSING_ERROR=Removed entry is missing
 BAD_DIRECTORY_CONTENT_SIZE_ERROR=Directory content size is invalid
+DIRECTORY_CREATE_ERROR=Directory create error
