--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
@@ -66,3 +66,8 @@ BAD_REMOVED_ENTRY_BLOCK_CHAIN_HEAD_ERROR=Removed entry block chain head is inval
 REMOVED_ENTRY_MISSING_ERROR=Removed entry is missing
 BAD_DIRECTORY_CONTENT_SIZE_ERROR=Directory content size is invalid
 DIRECTORY_CREATE_ERROR=Directory create error
+FILE_NOT_DIRECTORY_ERROR=File isn't directory
+FILE_POSITION_SET_ERROR=File position set error
+FILE_READ_ERROR=File read error
+FILE_WRITE_ERROR=File write error
+FILE_CREATE_ERROR=File create error
