--- a/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
+++ b/src/main/resources/fit_manyak_at_ngs_dot_ru/testtasks/ffs/internal/messages/Messages.properties
@@ -12,10 +12,8 @@ BLOCK_READ_ERROR=Block read error
 NEXT_BLOCK_INDEX_READ_ERROR=Next block index read error
 BAD_ROOT_DIRECTORY_ENTRY_BLOCK_NEXT_BLOCK_INDEX_ERROR=Root directory entry block next block index is invalid
 BAD_ROOT_DIRECTORY_ENTRY_FLAGS_ERROR=Root directory entry flags are invalid
-BAD_ROOT_DIRECTORY_ENTRY_CONTENT_BLOCK_CHAIN_HEAD_ERROR=Root directory entry content block chain head is invalid
 BAD_ROOT_DIRECTORY_ENTRY_NAME_ERROR=Root directory entry name is invalid
 BAD_DIRECTORY_ENTRY_FLAGS_ERROR=Directory entry flags are invalid
-BAD_DIRECTORY_ENTRY_CONTENT_BLOCK_CHAIN_HEAD_ERROR=Directory entry content block chain head is invalid
 BAD_DIRECTORY_ENTRY_NAME_ERROR=Directory entry name is invalid
 BAD_BLOCK_FILE_POSITION_ERROR=Block file position is invalid
 BIG_BLOCK_FILE_POSITION_ERROR=Block file position is too large
@@ -71,3 +69,4 @@ FILE_POSITION_SET_ERROR=File position set error
 FILE_READ_ERROR=File read error
 FILE_WRITE_ERROR=File write error
 FILE_CREATE_ERROR=File create error
+DIRECTORY_CONTENT_READ_ERROR=Directory content read error
